--- a/branches/vinculacion/WebContent/css/demo.css
+++ b/branches/vinculacion/WebContent/css/demo.css
@@ -1,22 +1,7 @@
-body {
-	/*margin-top: 10em;
-	text-align: center;
-	font-family: Calibri, Helvetica;
-	font-size: 13px;
-	background: rgb(253,247,176);
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(253,247,176,1) 0%, rgba(210,207,146,1) 98%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(253,247,176,1)), color-stop(98%,rgba(210,207,146,1)));
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(253,247,176,1) 0%,rgba(210,207,146,1) 98%);
-	background: -o-radial-gradient(center, ellipse cover,  rgba(253,247,176,1) 0%,rgba(210,207,146,1) 98%);
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(253,247,176,1) 0%,rgba(210,207,146,1) 98%);
-	background: radial-gradient(center, ellipse cover,  rgba(253,247,176,1) 0%,rgba(210,207,146,1) 98%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdf7b0', endColorstr='#d2cf92',GradientType=1 );*/
-}
-
 pre.code {
-    padding: 5px;
-    background-color: #eee;
-    border: 2px dashed gray
+	padding: 5px;
+	background-color: #eee;
+	border: 2px dashed gray
 }
 
 h2 {
@@ -27,143 +12,98 @@ h2 {
 	color: #673717;
 }
 
-a, a:visited {
-/*	display: block;*/
-/*	margin-top: 2em;*/
-/*	font-family: "Oleo Script";*/
-/*	font-size: 20px;*/
-/*	color: #673717;*/
-/*	text-decoration: none;*/
+.overlay-container {
+	display: none;
+	content: " ";
+	height: 95%;
+	width: 80%;
+	position: absolute;
+	left: 10%;
+	top: 15px;
+	background: -moz-radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
+		0%, rgba(127, 127, 127, 0.9) 100% );
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%,
+		color-stop(0%, rgba(127, 127, 127, 0) ),
+		color-stop(100%, rgba(127, 127, 127, 0.9) ) );
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
+		0%, rgba(127, 127, 127, 0.9) 100% );
+	background: -o-radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
+		0%, rgba(127, 127, 127, 0.9) 100% );
+	background: -ms-radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
+		0%, rgba(127, 127, 127, 0.9) 100% );
+	background: radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
+		0%, rgba(127, 127, 127, 0.9) 100% );
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007f7f7f',
+		endColorstr='#e67f7f7f', GradientType=1 );
 }
 
-	a:hover {
-/*		text-shadow: 2px 2px 0px rgba(0,0,0,0.1);*/
-	}
-	
-	.button {
-		/*display: inline-block;
-		margin-right: .5em;
-		box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4),
-						0px 0px 25px rgba(0,0,0,0.3);
-		
-		padding: 20px 20px;
-		border: 1px solid #562f15;
-		font-size: 20px;
-		font-weight: normal;
-		color: #fff;
-		text-shadow: 1px 1px 1px #7f130a;
-		border-radius: 3px;
-		cursor: pointer;
-		background: rgb(147,80,36);
-		background: -moz-linear-gradient(top,  rgba(147,80,36,1) 19%, rgba(106,58,26,1) 100%);
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(19%,rgba(147,80,36,1)), color-stop(100%,rgba(106,58,26,1)));
-		background: -webkit-linear-gradient(top,  rgba(147,80,36,1) 19%,rgba(106,58,26,1) 100%);
-		background: -o-linear-gradient(top,  rgba(147,80,36,1) 19%,rgba(106,58,26,1) 100%);
-		background: -ms-linear-gradient(top,  rgba(147,80,36,1) 19%,rgba(106,58,26,1) 100%);
-		background: linear-gradient(to bottom,  rgba(147,80,36,1) 19%,rgba(106,58,26,1) 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#935024', endColorstr='#6a3a1a',GradientType=0 );*/
-	}
-	
-		.button:hover {
-			/*background: rgb(167,91,41);
-			background: -moz-linear-gradient(top,  rgba(167,91,41,1) 19%, rgba(126,69,31,1) 100%);
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(19%,rgba(167,91,41,1)), color-stop(100%,rgba(126,69,31,1)));
-			background: -webkit-linear-gradient(top,  rgba(167,91,41,1) 19%,rgba(126,69,31,1) 100%);
-			background: -o-linear-gradient(top,  rgba(167,91,41,1) 19%,rgba(126,69,31,1) 100%);
-			background: -ms-linear-gradient(top,  rgba(167,91,41,1) 19%,rgba(126,69,31,1) 100%);
-			background: linear-gradient(to bottom,  rgba(167,91,41,1) 19%,rgba(126,69,31,1) 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a75b29', endColorstr='#7e451f',GradientType=0 );*/
-		}
-		
-		.button:active {
-			/*box-shadow: 0px 0px 25px rgba(0,0,0,0.3),
-							inset 0px 0px 20px #412410;*/
-		}
-	
-	.overlay-container {
-		display: none;
-		content: " ";
-		height: 95%;
-		width: 80%;
-		position: absolute;
-		left: 10%;
-		top: 15px;
-		background: -moz-radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%, rgba(127,127,127,0.9) 100%);
-		background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(127,127,127,0)), color-stop(100%,rgba(127,127,127,0.9)));
-		background: -webkit-radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%,rgba(127,127,127,0.9) 100%);
-		background: -o-radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%,rgba(127,127,127,0.9) 100%);
-		background: -ms-radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%,rgba(127,127,127,0.9) 100%);
-		background: radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%,rgba(127,127,127,0.9) 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007f7f7f', endColorstr='#e67f7f7f',GradientType=1 );
-	}
-	
-	.window-container {
-		display: block;
-		background: #fcfcfc;
-		margin: 8em auto;
-		width: 900px;
-		margin-top: 100px;
-		padding: 10px 20px 20px;
-		text-align: left;
-		z-index: 3;
-		border-radius: 3px;
-		box-shadow: 0px 0px 30px rgba(0,0,0,0.2);
-		-webkit-transition: 0.4s ease-out;
-		-moz-transition: 0.4s ease-out;
-		-ms-transition: 0.4s ease-out;
-		-o-transition: 0.4s ease-out;
-		transition: 0.4s ease-out;
-		opacity: 0;
-	}
-	
-	.zoomin {
-		-webkit-transform:  scale(1.2);
-		-moz-transform:  scale(1.2);
-		-ms-transform:  scale(1.2);
-		transform:  scale(1.2);
-	}
-	
-	.zoomout {
-		-webkit-transform:  scale(0.7);
-		-moz-transform:  scale(0.7);
-		-ms-transform:  scale(0.7);
-		transform:  scale(0.7);
-	}
-	
-	.window-container-visible {
-		-webkit-transform:  scale(1);
-		-moz-transform:  scale(1);
-		-ms-transform:  scale(1);
-		transform:  scale(1);
-		opacity: 1;
-	}
-	
-		.window-container h3 {
-			margin: 1em 0 0.5em;
-			//font-family: "Oleo Script";
-			font-weight: normal;
-			font-size: 25px;
-			text-align: center;
-		}
-		
-		.close {
-			font-size: 16px;
-			font-weight: bold;
-			text-align: center;
-			border: 1px solid rgb(200, 200, 200);
-			padding: 5px 10px 5px 10px;
-		}
-	
-			.close:hover {
-				background-color: rgb(241, 251, 251);
-				font-size: 16px;
-				font-weight: bold;
-				text-align: center;
-				border: 1px solid rgb(111, 191, 251);
-				padding: 5px 10px 5px 10px;
-				cursor: pointer;
-			}
-	
-			.close:active {
-				color: #0066CC;
-			}
+.window-container {
+	display: block;
+	background: #fcfcfc;
+	margin: 8em auto;
+	width: 900px;
+	margin-top: 100px;
+	padding: 10px 20px 20px;
+	text-align: left;
+	z-index: 3;
+	border-radius: 3px;
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+	-webkit-transition: 0.4s ease-out;
+	-moz-transition: 0.4s ease-out;
+	-ms-transition: 0.4s ease-out;
+	-o-transition: 0.4s ease-out;
+	transition: 0.4s ease-out;
+	opacity: 0;
+}
+
+.zoomin {
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+.zoomout {
+	-webkit-transform: scale(0.7);
+	-moz-transform: scale(0.7);
+	-ms-transform: scale(0.7);
+	transform: scale(0.7);
+}
+
+.window-container-visible {
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
+}
+
+.window-container h3 {
+	margin: 1em 0 0.5em;
+	font-family: "Oleo Script";
+	font-weight: normal;
+	font-size: 25px;
+	text-align: center;
+}
+
+.close {
+	font-size: 16px;
+	font-weight: bold;
+	text-align: center;
+	border: 1px solid rgb(200, 200, 200);
+	padding: 5px 10px 5px 10px;
+}
+
+.close:hover {
+	background-color: rgb(241, 251, 251);
+	font-size: 16px;
+	font-weight: bold;
+	text-align: center;
+	border: 1px solid rgb(111, 191, 251);
+	padding: 5px 10px 5px 10px;
+	cursor: pointer;
+}
+
+.close:active {
+	color: #0066CC;
+}
