--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -45,20 +45,28 @@ ul {
 	min-height: 450px;
 }
 
-img.headerimg {
-	margin-right: 220px;
+img.headerimgleft {
 	height: 120px !important;
-	margin-top: -5px;
+	padding-left: 5px;
+}
+
+img.headerimgright {
+	height: 114px !important;
+	padding-left: 120px;
+	padding-bottom: 9px;
 }
 
 label.headerlabeltitle {
-	display: block;
+	display: inline-table;
 	font-family: Calibri, Verdana;
 	font-size: 37px;
+	font-weight: bold;
 	text-align: center;
-	padding: auto auto auto auto;
-	height: 77px;
+	padding: 0 0 0 60px;
+	height: 50px;
 	color: #013668;
+	width: 420px;
+	cursor: pointer;
 }
 
 label.headerlabelusuario {
@@ -66,7 +74,7 @@ label.headerlabelusuario {
 	font-family: Calibri, Verdana;
 	font-size: 14px;
 	text-align: right;
-	padding: 15px 0 0 0;
+	padding: 1px 0 0 0;
 	height: 15px;
 	color: #013668;
 }
@@ -77,7 +85,7 @@ label.headerlabelmanual {
 	font-size: 14px;
 	text-align: center;
 	font-weight: bold;
-	padding: 15px 0 0 0;
+	padding: 1px 0 0 0;
 	height: 15px;
 	width: 150px;
 	color: #013668;
@@ -90,7 +98,7 @@ label.headerlabelmanual:hover {
 	font-size: 14px;
 	text-align: center;
 	font-weight: bold;
-	padding: 15px 0 0 0;
+	padding: 1px 0 0 0;
 	height: 15px;
 	width: 150px;
 	text-decoration: underline;
@@ -104,7 +112,7 @@ label.headerlabelsalir {
 	font-size: 14px;
 	text-align: center;
 	font-weight: bold;
-	padding: 15px 0 0 0;
+	padding: 1px 0 0 0;
 	height: 15px;
 	width: 40px;
 	color: #013668;
@@ -117,7 +125,7 @@ label.headerlabelsalir:hover {
 	font-size: 14px;
 	text-align: center;
 	font-weight: bold;
-	padding: 15px 0 0 0;
+	padding: 1px 0 0 0;
 	height: 15px;
 	width: 40px;
 	text-decoration: underline;
