--- a/branches/vinculacion/WebContent/css/layout.css
+++ b/branches/vinculacion/WebContent/css/layout.css
@@ -272,6 +272,14 @@ div.menu1:hover,div.menu2:hover,div.menu3:hover,div.menu4:hover,div.menu5:hover,
 	border-left: 1px solid #F5F5F5;
 }
 
+.cuerpo3TablaResumen {
+	font-family: Calibri, Verdana;
+	font-size: 16px;
+	font-weight: bold;
+	color: #5C5C5C;
+	text-decoration: none;
+}
+
 .cuerpo1TextoResumen {
 	font-family: Calibri, Verdana;
 	font-size: 14px;
